--- a/docs/data_catalog/data_catalog_agent_setup.mdx
+++ b/docs/data_catalog/data_catalog_agent_setup.mdx
@@ -4,6 +4,12 @@ title: Data Catalog Agent Setup
 sidebar_label: Data Catalog Agent Setup
 ---
 
+:::warning
+This section of the Data Catalog application has been __deprecated__. Instead of manually configuring the Cronjob, 
+Data Catalog UI now provides a section for [Connection Management](/data_catalog/frontend/data_catalog_connections.mdx), 
+which interacts with [Fabric BFF](/data_catalog/data_catalog_fabric_bff.mdx) and [Job Runner](/data_catalog/data_catalog_job_runner.mdx) services.
+:::
+
 Once Data Catalog application has been deployed and ready to be used, it is time to collect and gather data schemas from your systems
 and transform them into datasets that are compliant to the [Open Lineage framework specifications](https://openlineage.io/docs/).  
 
