--- a/docs/data_catalog/secure_access.mdx
+++ b/docs/data_catalog/secure_access.mdx
@@ -598,8 +598,11 @@ all the functionalities of Data Catalog system, both the frontend and backend co
 
 | Endpoint            | Service         | Authentication Required | User Group Permission |
 |---------------------|-----------------|:-----------------------:|-----------------------|
-| `/api/data-catalog` | fabric-bff      |            ✅            | `false`               |
-| `/data-catalog`     | data-catalog-fe |            ✅            | `true`                |
+| `/api/connections`  | fabric-bff      |            ✅           | `false`               |
+| `/api/data-catalog` | fabric-bff      |            ✅           | `false`               |
+| `/api/job-runner`   | fabric-bff      |            ✅           | `false`               |
+| `/api/open-lineage` | fabric-bff      |            ✅           | `false`               |
+| `/data-catalog`     | data-catalog-fe |            ✅           | `true`                |
 
 ### Routes
 
@@ -608,11 +611,31 @@ is listed here:
 
 | Permission               | Context                                                                              |
 |--------------------------|--------------------------------------------------------------------------------------|
+| `admin:connections`      | allow user to manage data catalog connections                                        |
 | `read:data-assets`       | allow visualizing data catalog records and their metadata                            |
 | `update:metadata-assets` | enable editing metadata associated to data catalog records                           |
 | `update:bulk-action`     | allow users performing the same operation in bulk over multiple data catalog records |
+| `update:lineage`         | allow users to update lineage information of assets                                  |
 
-The permissions described in the table above needs then to be applied to all the different routes exposed by Data Catalog application,
+:::caution
+Please ensure that all these endpoints and subsequent routes are set with _Authentication Required_ in their security details tab.
+:::
+
+#### Connections API
+
+The permissions described in the table above needs then to be applied to all the different routes exposed over `/api/connections/*`,
+so that each operation is covered with the correct grant.
+
+| Route                                                      | Type      | Method   | User Group Permissions                  |
+|------------------------------------------------------------|-----------|----------|-----------------------------------------|
+| `/items`                                                   | REST      | GET      | `permissions["admin:connections"]`      |
+| `/items`                                                   | REST      | POST     | `permissions["admin:connections"]`      |
+| `/items/:id`                                               | REST      | PATCH    | `permissions["admin:connections"]`      |
+| `/items/:id`                                               | REST      | DELETE   | `permissions["admin:connections"]`      |
+
+#### Data Catalog API
+
+The permissions described in the table above needs then to be applied to all the different routes exposed over `/api/data-catalog/*`,
 so that each operation is covered with the correct grant.
 
 | Route                                                      | Type      | Method | User Group Permissions                  |
@@ -649,9 +672,38 @@ so that each operation is covered with the correct grant.
 | `/metadata-registry/search`                                | REST      | GET    | `permissions["read:data-assets"]`       |
 | `/bulk-actions`                                            | Websocket | GET    | `permissions["update:bulk-action"]`     |
 
-:::caution
-Please ensure that all these endpoints and subsequent routes are set with _Authentication Required_ in their security details tab.
-:::
+#### Job Runner API
+
+The permissions described in the table above needs then to be applied to all the different routes exposed over `/api/job-runner/*`,
+so that each operation is covered with the correct grant.
+
+| Route                         | Type      | Method   | User Group Permissions                  |
+|------------------------------ |-----------|----------|-----------------------------------------|
+| `/secret-names`               | REST      | GET      | `permissions["admin:connections"]`       |
+| `/agent/sync`                 | REST      | POST     | `permissions["admin:connections"]`       |
+| `/agent/dsn`                  | REST      | GET      | `permissions["admin:connections"]`       |
+| `/agent/drivers`              | REST      | GET      | `permissions["admin:connections"]`       |
+| `/feedback`                   | Websocket | GET      | `permissions["admin:connections"]`       |
+
+#### Open Lineage API
+
+The permissions described in the table above needs then to be applied to all the different routes exposed over `/api/open-lineage/*`,
+so that each operation is covered with the correct grant.
+
+| Route                                                      | Type      | Method   | User Group Permissions                  |
+|------------------------------------------------------------|-----------|----------|-----------------------------------------|
+| `/jobs/from/system/:id/direction/:direction`               | REST      | GET      | `permissions["read:data-assets"]`       |
+| `/jobs/from/system/:id/direction/:direction`               | REST      | GET      | `permissions["read:data-assets"]`       |
+| `/jobs/items`                                              | REST      | POST     | `permissions["update:lineage"]`         |
+| `/jobs/items/:id`                                          | REST      | PATCH    | `permissions["update:lineage"]`         |
+| `/jobs/items/:id`                                          | REST      | DELETE   | `permissions["update:lineage"]`         |
+| `/dataset/items/:id`                                       | REST      | GET      | `permissions["read:data-assets"]`       |
+| `/dataset/items`                                           | REST      | POST     | `permissions["update:lineage"]`         |
+| `/dataset/items/:id`                                       | REST      | PATCH    | `permissions["update:lineage"]`         |
+| `/dataset/items/:id`                                       | REST      | DELETE   | `permissions["update:lineage"]`         |
+| `/facets/storage/items/:id`                                | REST      | GET      | `permissions["read:data-assets"]`       |
+| `/facets/storage/items/:id`                                | REST      | DELETE   | `permissions["update:lineage"]`         |
+
 
 ## Users Management
 
