--- a/docs/data_catalog/data_catalog_job_runner.mdx
+++ b/docs/data_catalog/data_catalog_job_runner.mdx
@@ -5,7 +5,10 @@ sidebar_label: Job Runner
 ---
 
 import runnerSchema from "@site/static/schemas/data_fabric/data-catalog-job-runner.config.schema.json"
-import SchemaViewer from "../../src/components/SchemaViewer"
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+
+
 
 Data Catalog _Job Runner_ can trigger the execution of different jobs that can update the state of the Data Catalog solution. 
 
@@ -18,21 +21,32 @@ Here are listed the main jobs that the service can execute.
 
 ### Data Catalog Agent
 
-_Data Catalog Agent_ is a routine that, given a connection, queries datasources for the data schemas of the resources they own and stores them into the Data Catalog storage layer
-as documents compliant to the [Open Lineage specification](https://openlineage.io/).
+_Data Catalog Agent_ is a routine that, given a __Connection__, queries datasources for the data schemas of the resources they own and stores them into the Data Catalog storage layer
+as documents compliant to the [Open Lineage specification](https://openlineage.io/). It provides facilities to:
 
-In the context of databases, it provides facilities to:
+1. query tables schemas;
+2. aggregate them in a unique JSON format;
+3. store the resulting datasets into the MongoDb database of the Data Catalog application
 
-1. query tables schemas
-2. aggregate them in a unique asset (JSON format)
+#### Odbc Connections
 
-For this reason, it requires [Open Database Connectivity (ODBC)](https://en.wikipedia.org/wiki/Open_Database_Connectivity) drivers to connect to external DBMS.
-The service comes already with the required ODBC drivers of the vendors that are already supported by the Data Catalog solution.
+In the context of databases, it requires [Open Database Connectivity (ODBC)](https://en.wikipedia.org/wiki/Open_Database_Connectivity) drivers to connect to external DBMS.
+The service comes already equipped with the following ODBC drivers:
+
+- ODBC Driver 18 for SQL Server,
+- MySQL ODBC 9.1 Unicode Driver,
+- MySQL ODBC 9.1 ANSI Driver,
+- MySQL ODBC 8.0 Unicode Driver,
+- MySQL ODBC 8.0 ANSI Driver,
+- PostgreSQL ANSI,
+- PostgreSQL Unicode,
+- Oracle 23 ODBC driver,
+- Saphana HDBODBC
 
 ### Data Catalog Sync
 
-_Data Catalog Sync_ is a routine that is executed always after a _Data Catalog Agent job_: its duty is to align the datasets retrieved by the Agent and convert them
-into assets that can be managed by the Data Catalog application.
+_Data Catalog Sync_ is a routine that is automatically scheduled after a _Data Catalog Agent job_: its duty is to align the datasets retrieved previously by the Agent
+and convert theminto assets that can be managed by the Data Catalog application.
 
 ## Configuration
 
@@ -44,8 +58,8 @@ Fabric BFF can be customized using the following environment variables:
 |-------------------------------|----------|-----------------------------------------------------------------------------------------------------------------------------------|-------------------------------------|
 | `GRPC_PORT`                   | -        | This variable determines the TCP port where the **GRPC controller** binds its listener                                            | 50051                               |
 | `LOG_LEVEL`                   | -        | Specify the centralized application log level, choosing from options such as `debug`, `error`, `info`, `trace` or `warn`          | `info`                              |
-| `JOB_RUNNER_FOLDER`           | -        | Set the location of the configuration files                                                                                       | `~/.fd/job-runner`                  |
-| `ODBCINI`                     | -        | Optional full path where a user custom defined `.odbc.ini` can be used to retrieve user defined data sources                      |                                     |
+| `JOB_RUNNER_FOLDER`           | -        | Set the location of the configuration files                                                                                       | `~/job-runner`                      |
+| `ODBCINI`                     | -        | Optional full path where a custom `.odbc.ini` can be used to retrieve user defined data sources                                   | `~/job-runner/.odbc.ini`            |
 
 ### Main Configuration
 
@@ -131,7 +145,257 @@ When the service receives a request to trigger a job, it will first try to resel
 if no secret can be found, the service will try to read the corresponding secret from the process environment. 
 :::
 
-### gRPC Services
+### ODBC Configuration
+
+An ODBC connection can configured either by the means of Connection String or Data Source Name (DSN).
+
+Connection String is a string of key-value pairs where each of them represents a parameter of your connection.
+
+Data Source Name (DSN) are symbolic names that can be linked to an ODBC connection. Job Runner service can read into a user-defined `.odbc.ini` file to load
+at runtime the ODBC connections that can be executed through DSN. The list of available DSN then can be used by the Data Catalog UI while configuring an ODBC connection.
+
+Job Runner reads DSN in its user-defined `.odbc.ini` located by default in the main configuration folder. To learn more about DSN and their connection parameters, 
+please refer [to the official documentation](https://learn.microsoft.com/en-us/sql/connect/odbc/dsn-connection-string-attribute).
+
+Here are listed some example for the supported ODBC drivers:
+
+#### Oracle
+
+
+
+<Tabs groupId='oracle-odbc' queryString>
+
+<TabItem value="connection-string" label="Connection String">
+
+The list of all the available connection parameters can be found in the [official Oracle documentation](https://docs.oracle.com/en//database/oracle/oracle-database/23/odbcd/basic-programming-oracle-odbc.html#GUID-634470F3-DAEE-481D-9EB4-16BF1FC6ABA2).
+
+```
+driver=Oracle 23 ODBC driver;dbq=<SERVERNAME>;uid=<UID>;pwd=<PWD>;
+```
+
+</TabItem>
+
+<TabItem value="dsn" label="DSN">
+
+Here's an example of a `.odbc.ini` file containing an Oracle DSN.
+
+```ini
+# 👇 change the placeholder with the name of your connection
+[{CONNECTION NAME}]
+AggregateSQLType=FLOAT
+Application Attributes=T
+Attributes=W
+BatchAutocommitMode=IfAllSuccessful
+BindAsFLOAT=F
+CacheBufferSize=20
+CloseCursor=F
+# 👇 ...optional description
+Description= 
+DisableDPM=F
+DisableMTS=T
+DisableRULEHint=T
+Driver=Oracle 23 ODBC driver
+EXECSchemaOpt=
+EXECSyntax=T
+Failover=T
+FailoverDelay=10
+FailoverRetryCount=10
+FetchBufferSize=64000
+ForceWCHAR=F
+LobPrefetchSize=8192
+Lobs=T
+Longs=T
+MaxLargeData=0
+MaxTokenSize=8192
+MetadataIdDefault=F
+# 👇 ...db password credentials
+Password= 
+QueryTimeout=T
+ResultSets=T
+# 👇 ...here goes the DBQ field of the connection string
+ServerName= 
+SQLGetData extensions=F
+SQLTranslateErrors=F
+StatementCache=F
+Translation Option=0
+UseOCIDescribeAny=F
+# 👇 ...db username credentials
+UserID= 
+```
+
+</TabItem>
+
+</Tabs>
+
+#### PostgreSQL
+
+<Tabs groupId='pgsql-odbc' queryString>
+
+<TabItem value="connection-string" label="Connection String">
+
+The list of all the available connection parameters can be found in the [official documentation](https://odbc.postgresql.org/docs/config-opt.html).
+
+```
+driver={PostgreSQL Unicode};server=<HOSTNAME>;port=5432;uid=<UID>;pwd=<PWD>;database=<DATABASE>;
+```
+
+</TabItem>
+<TabItem value="dsn" label="DSN">
+
+Here's an example of a `.odbc.ini` file containing a PostgreSQL DSN.
+
+```ini
+; 👇 change the placeholder with your connection name
+[{NAME}]
+; 👇 here goes the name of the database you want to connect
+Database= 
+; 👇 [optional] here goes the description of your connection
+Description=
+Driver=PostgreSQL Unicode
+Port=5432
+; 👇 database host location
+ServerName= 
+; 👇 database username
+Username=
+; 👇 database password
+Password=
+```
+
+</TabItem>
+</Tabs>
+
+#### MySQL
+
+<Tabs groupId='mysql-odbc' queryString>
+
+<TabItem value="connection-string" label="Connection String">
+
+The list of all the available connection parameters can be found in the [official documentation](https://dev.mysql.com/doc/connector-odbc/en/connector-odbc-configuration-connection-without-dsn.html).
+
+```
+driver={MySQL ODBC 9.1 Unicode Driver};server=<HOSTNAME>;port=5432;uid=<UID>;pwd=<PWD>;database=<DATABASE>;
+```
+
+</TabItem>
+<TabItem value="dsn" label="DSN">
+
+Here's an example of a `.odbc.ini` file containing a MySQL DSN. (for more details, refer to the [official documentation](https://dev.mysql.com/doc/connector-odbc/en/connector-odbc-configuration-dsn-unix.html))
+
+```ini
+; 👇 change the placeholder with your connection name
+[{NAME}]
+Driver=MySQL ODBC 9.1 Unicode Driver
+; 👇 here goes the port of your database (if not specified, defaults to 3306)
+Port=
+; 👇 here goes the name of the database you want to connect
+Database=
+; 👇 database host location
+Server= 
+; 👇 database username
+Username=
+; 👇 database password
+Password=
+```
+
+</TabItem>
+</Tabs>
+
+#### MSSQL
+
+You can refer to [the official documentation](https://learn.microsoft.com/en-us/sql/connect/odbc/dsn-connection-string-attribute?view=sql-server-ver16) for a list of all the supported parameters.
+
+<Tabs groupId='mssql-odbc' queryString>
+
+<TabItem value="connection-string" label="Connection String">
+
+```
+Driver={ODBC Driver 18 for SQL Server};Server=<HOSTNAME>;Database=<DBNAME>;Uid=<USERNAME>;Pwd=<PWD>;TrustServerCertificate=yes
+
+```
+
+</TabItem>
+<TabItem value="dsn" label="DSN">
+
+Here's an example of a `.odbc.ini` file containing a MSSQL DSN. Username and password must be provided from the Data Catalog UI.
+
+```ini
+; 👇 change the placeholder with your connection name
+[{NAME}]
+Driver=ODBC Driver 18 for SQL Server
+; 👇 here goes the name of the database you want to connect
+Database=
+; 👇 write in the form of "tcp:<hostname>,<port number>"
+Server=
+; 👇 enable self-signed encryption
+TrustServerCertificate=yes
+```
+
+</TabItem>
+</Tabs>
+
+#### Saphana
+
+<Tabs groupId='saphana-odbc' queryString>
+
+<TabItem value="connection-string" label="Connection String">
+
+You can refer to [the official documentation](https://help.sap.com/docs/SAP_HANA_CLIENT/f1b440ded6144a54ada97ff95dac7adf/7cab593774474f2f8db335710b2f5c50.html) for a list of all the supported parameters.
+
+```
+Driver={Saphana HDBODBC};ServerNode=<HOSTNAME>:<PORT>;DatabaseName=<DBNAME>;UID=<USERNAME>;PWD=<PWD>;
+
+```
+
+</TabItem>
+<TabItem value="dsn" label="DSN">
+
+Here's an example of a `.odbc.ini` file containing a Saphana DSN. Username and password must be provided from the Data Catalog UI.
+
+```ini
+; 👇 change the placeholder with your connection name
+[{NAME}]
+Driver=Saphana HDBODBC
+; 👇 here goes the name of the database you want to connect
+DatabaseName=
+; 👇 write in the form of "<hostname>:<port number>"
+ServerNode=
+```
+
+</TabItem>
+</Tabs>
+
+
+### Oracle Support
+
+Job Runner needs additional configuration to run jobs towards Oracle databases. 
+
+With Oracle databases, connectivity can be handled with [`tnsnames.ora` files and/or wallets](https://docs.oracle.com/cd/B28359_01/network.111/b28317/tnsnames.htm#NETRF007).
+
+#### Tsnames
+
+The service expects such assets in the Config Map located at `/opt/oracle/instantclient/network/admin/`, which must be checked to not owerwrite the content of the whole folder. 
+
+#### Wallets
+
+Oracle Wallet contains authentication and signal credentials of a database, which needs to be built with the whole service. 
+
+To add an oracle wallet to Job Runner service, you have to __replace the microservice container with a custom container located in your registry.
+This custom container consists of a `Dockerfile`, which uses the Job Runner service as base layer and adds on top of it the desired wallets.
+
+Once the custom wallets are copied into the container's `/opt/oracle/instantclient/network/admin/`, you can tune the `sqlora.net` file registering the path `/opt/oracle/instantclient/network/admin/`. 
+This path can be overridden by the means of the environment variable `TNS_ADMIN`. 
+
+```docker title=Dockerfile
+FROM nexus.mia-platform.eu/data-fabric/job-runner:<latest version>
+COPY <wallet location> /opt/oracle/instantclient/network/admin/
+
+COPY <<EOF /opt/oracle/instantclient/network/admin/sqlora.net
+WALLET_LOCATION = (SOURCE = (METHOD = file) (METHOD_DATA = (DIRECTORY="/opt/oracle/instantclient/network/admin"))) SSL_SERVER_DN_MATCH=yes
+
+EOF
+```
+
+## gRPC Services
 
 The request exchanged between Fabric BFF and Job Runner services are performed through [gRPC](https://grpc.io/).
 
