--- a/docs/data_catalog/data_catalog_open_lineage.mdx
+++ b/docs/data_catalog/data_catalog_open_lineage.mdx
@@ -274,10 +274,13 @@ The following routes are exposed over the `/open-lineage/*` base path.
 
 Here are the migration steps to perform between each version of the service.
 
+### From 0.1.1 to 0.2.0
+
+The following steps needs to be followed:
+
+- Run [`fabric_admin:0.2.0` cronjob](/data_catalog/database_setup.mdx#cli-configuration) to update persistence layer collections schemas;
+- Add the `/open-lineage/*` endpoints to your project's configuration, along with [their permissions](/data_catalog/secure_access.mdx#open-lineage-api). 
+
 ### From 0.1.0 to 0.1.1
 
 Configure and execute the [Fabric Sync cronjob](/data_catalog/data_catalog_agent_setup.mdx#sync-assets) before releasing the service.
-
-### From 0.1.1 to 0.2.0
-
-Add the `/open-lineage/*` endpoints to your project's configuration, along with their permissions. 
