update job runner doc

--- a/docs/data_catalog/data_catalog_fabric_bff.mdx
+++ b/docs/data_catalog/data_catalog_fabric_bff.mdx
@@ -208,18 +208,18 @@ In the table below is provided the list of endpoints that should be [defined in 
 
 Under the endpoint specified above, the following routes are served by Fabric BFF
 
-| Route                        | Type      | Method | Description                                                                                                                                                                                                           |
-|------------------------------|-----------|--------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| `/data-catalog/bulk-actions` | Websocket | *      | Route for handling async operations over multiple datasets records                                                                                                                                                    |
-| `/data-catalog/*`            | REST      | *      | Routes prefixed with `/data-catalog/` are forwarded towards Open Lineage service.<br/> For more details please read [corresponding documentation](/data_catalog/data_catalog_open_lineage.mdx#endpoints)              |
-| `/open-lineage/*`            | REST      | *      | Routes prefixed with `/data-catalog/` are forwarded towards Open Lineage service.<br/> For more details please read [corresponding documentation](/data_catalog/data_catalog_open_lineage.mdx#endpoints)              |
-| `/job-runner/feedback`       | Websocket | *      | Route for receiving feedback messages by the jobs executed by the Job Runner                                                                                                                                          |
-| `/job-runner/*`              | REST      | *      | Routes prefixed with `/job-runner` are converted into gRPC requests towards Job Runner service.<br/> For more details please read [corresponding documentation](/data_catalog/data_catalog_open_lineage.mdx#endpoints)|
-| `/connections/items`         | REST      | GET    | Route for reading the list of connections configured for the data catalog application.                                                                                                                                |
-| `/connections/items/`        | REST      | POST   | Route for creatin a connection for the data catalog application.                                                                                                                                                      |
-| `/connections/items/:id`     | REST      | GET    | Route for reading a given connection configured for the data catalog application.                                                                                                                                     |
-| `/connections/items/:id`     | REST      | GET    | Route for updating a given connection configured for the data catalog application.                                                                                                                                    |
-| `/connections/items/:id`     | REST      | DELETE | Route for deleting a given connection configured for the data catalog application.                                                                                                                                    |
+| Route                        | Type      | Method | Description                                                                                                                                                                                                             |
+|------------------------------|-----------|--------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| `/data-catalog/bulk-actions` | Websocket | *      | Route for handling async operations over multiple datasets records                                                                                                                                                      |
+| `/data-catalog/*`            | REST      | *      | Routes prefixed with `/data-catalog/` are forwarded towards Open Lineage service.<br/> For more details please read [corresponding documentation](/data_catalog/data_catalog_open_lineage.mdx#endpoints)                |
+| `/open-lineage/*`            | REST      | *      | Routes prefixed with `/data-catalog/` are forwarded towards Open Lineage service.<br/> For more details please read [corresponding documentation](/data_catalog/data_catalog_open_lineage.mdx#endpoints)                |
+| `/job-runner/feedback`       | Websocket | *      | Route for receiving feedback messages by the jobs executed by the Job Runner                                                                                                                                            |
+| `/job-runner/*`              | REST      | *      | Routes prefixed with `/job-runner` are converted into gRPC requests towards Job Runner service.<br/> For more details please read [corresponding documentation](/data_catalog/data_catalog_job_runner.mdx#grpc-services)|
+| `/connections/items`         | REST      | GET    | Route for reading the list of connections configured for the data catalog application.                                                                                                                                  |
+| `/connections/items/`        | REST      | POST   | Route for creatin a connection for the data catalog application.                                                                                                                                                        |
+| `/connections/items/:id`     | REST      | GET    | Route for reading a given connection configured for the data catalog application.                                                                                                                                       |
+| `/connections/items/:id`     | REST      | GET    | Route for updating a given connection configured for the data catalog application.                                                                                                                                      |
+| `/connections/items/:id`     | REST      | DELETE | Route for deleting a given connection configured for the data catalog application.                                                                                                                                      |
 
 ## Migration Guides
 
