--- a/docs/data_catalog/frontend/data_catalog_connections.mdx
+++ b/docs/data_catalog/frontend/data_catalog_connections.mdx
@@ -3,3 +3,356 @@ id: data_catalog_connections
 title: Data Catalog Connections Management
 sidebar_label: Connections Management
 ---
+
+
+## Introduction to Connections
+
+Connections represent the source of truth of the Data Catalog. By retrieving their metadata, is possible use their assets 
+to perform actions such as [Enrichment](/data_catalog/frontend/data_catalog_assets.mdx) and [Lineage](/data_catalog/frontend/data_lineage.mdx).
+
+<div style={{display: 'flex', justifyContent: 'center'}}>
+  <div style={{display: 'flex', width: '100%'}}>
+
+![Connections Panel](./../img/connections.png)
+
+  </div>
+</div>
+
+The __Connections Panel__ provides the following features:
+
+- __Connections Creation__: the UI provides a creation wizard that let users define a new connection that contributes to Data Catalog assets;
+- __Connection Overview__: users can see and edit the parameters of a particular connection. Moreover, users can delete connections that are no longer needed;
+- __Connections Management__: users can see a list of connections that populate the Data Catalog application. From this table, users can run a Catalog Agent Sync Job of the Job Runner, to import connections assets in the Data Catalog.
+
+:::caution
+This section of Data Catalog should be accessible only by administrators that have access to the connection credentials of external sources.
+
+For such reasons, the Data Catalog application will give the permissions `admin:connections` to the underlying endpoints of the Connections Panel. 
+See the [Secure Access section](/data_catalog/secure_access.mdx) to learn more about the authorization process.  
+:::
+
+### Input Management
+
+The information that can be provided inside the text fields that are accessible across this section can be of two types:
+
+- __Plain Text__: the field is a regular text field;
+  <div style={{display: 'flex', justifyContent: 'center'}}>
+    <div style={{display: 'flex', width: '100%'}}>
+
+    ![Connections Plain](./../img/connections_input_plain.png)
+
+    </div>
+  </div>
+- __Secret Name__: the field will be a text referencing a secret name defined within the _Job Runner service_ (see the paragraph Secrets Name Configuration for more details).
+  A dropdown can provide a list of suggestions containing existing secret names retrieved from the service itself. If a secret name that doesn't appear in the list is provided, the service will try to read
+  that name from the environment variables of the service.
+  <div style={{display: 'flex', justifyContent: 'center'}}>
+    <div style={{display: 'flex', width: '100%'}}>
+
+    ![Connections Plain](./../img/connections_input_secret.png)
+
+    </div>
+  </div>
+
+:::info
+Since a connection requires usually to provide sensible information (such as passwords, connection strings, etc...), some fields can __only__ be filled with _Secret Names_.
+:::
+
+## Create a Connection
+
+By clicking on the `Create Connection` button, users are guided through a creation wizard that defines the parameters to connect to a connection.
+
+<div style={{display: 'flex', justifyContent: 'center'}}>
+  <div style={{display: 'flex', width: '100%'}}>
+
+![Connections Wizard](./../img/connections_wizard.png)
+
+  </div>
+</div>
+
+### Connection Providers
+
+First of all, users needs to choose the provider they want to access from Data Catalog.
+The following providers are supported, which can be grouped into the following categories:
+
+- __HTTP Connections__:
+  - __Salesforce SObjects__: storage layer provided by Salesforce;
+  - __MIA Platform Crud Service__: data layer on __MongoDB__ provided by MIA Platform Console.
+- __ODBC Connections__: storage layer that can be reached using [Open Database Connectivity (ODBC)](https://en.wikipedia.org/wiki/Open_Database_Connectivity). The following providers are supported:
+  - __Oracle DB__
+  - __PostgreSQL__
+  - __MySQL__
+  - __Microsoft Server SQL__
+  - __SAP Hana__
+
+
+### Connection Details
+
+The Connection Details step will show the connection accordingly to the chosen provider. Regardless of the provider, users have to provide a unique _name_ for the connection, which will correspond to a __System of Record__ inside the Data Catalog.
+
+:::caution
+The name of a connection is an information that __can't__ be modified once the connection has been created.
+:::
+
+Now we explore all the details for each provider Data Catalog provides support.
+
+---
+
+#### ODBC Connections
+
+:::tip
+Before configuring an ODBC Connection, be sure that the Job Runner Service has been configured properly for ODBC Connections.
+
+For more details, [see the dedicated section](/data_catalog/data_catalog_job_runner.mdx#odbc-configuration).
+:::
+ODBC Providers can have two types of mode to perform the connection. 
+
+- __Connection String__: users needs only to pick a secret name referencing a connection string in the Job Runner Service.
+  <div style={{display: 'flex', justifyContent: 'center'}}>
+    <div style={{display: 'flex', width: '100%'}}>
+
+    ![ODBC Connection Form Plain](./../img/connections_odbc_string.png)
+
+    </div>
+  </div>
+- __Data Source Name (DSN)__: users can choose between the available DSN configured in the Job Runner Service. 
+  Users can also configure the DSN's username and password if those information are not available inside the DSN. 
+  Be aware that username and password are __mandatory__ for connections such as __MSSQL__ or __SAPHANA__.
+
+  <div style={{display: 'flex', justifyContent: 'center'}}>
+    <div style={{display: 'flex', width: '100%'}}>
+
+    ![ODBC Connection Form DSN](./../img/connections_odbc_dsn.png)
+
+    </div>
+  </div>
+
+##### Oracle Query Settings
+
+__Oracle DB__ has also a section which can change the behavior of the underlying queries that the _Agent Job_ will
+perform while retrieving assets information. The following parameters can be tuned:
+
+- __Compatibility__: if the data source is an `ORACLE 11g` database, 
+  this check should be active since the database [does not support](https://docs.oracle.com/database/121/LNPLS/release_changes.htm#LNPLS113) pagination via `OFFSET ? ROWS FETCH FIRST ? ROWS ONLY`;  
+- __Query Mode__: based on this option, the Agent Job will perform the scan query on a different set of views provided by Oracle. Three options are available:
+
+  - __User__: tables `user_tables`, `user_views` and `user_mviews` will be used. This represents the __default mode__ if no option has been provided;
+  - __All__: tables `all_tables`, `all_views` and `all_mviews` will be used. 
+    It's __strongly suggested__ to add a comma-separeted list of schemas in the dedicated field to only pick the tables of interest;
+  - __DBA__: tables `dba_tables`, `dba_views` and `dba_mviews` will be used. 
+    It's __strongly suggested__ to add a comma-separeted list of schemas in the dedicated field to only pick the tables of interest.
+
+---
+
+#### Salesforce SObjects
+
+To connect to [Salesforce SObjects API](https://developer.salesforce.com/docs/atlas.en-us.api_rest.meta/api_rest/intro_what_is_rest_api.htm), first
+you need the basic information of the Salesforce instance, such as its __Url__ and __API Version__.
+
+<div style={{display: 'flex', justifyContent: 'center'}}>
+  <div style={{display: 'flex', width: '100%'}}>
+
+![Salesforce Connection Form](./../img/connections_salesforce.png)
+
+  </div>
+</div>
+
+> The range of supported `apiVersion` goes from `31.0` to `59.0`.
+
+<details>
+<summary>SObjects Permissions</summary>
+
+Make sure the user configured in the [Authentication card](#authentication) has the right permissions to retrieve all the `SObject`s you need.
+
+If not all the `SObjects` are retrieved you'll have to follow these steps to expose them through the API:
+
+**For custom `SObjects`**
+
+- Go to your Salesforce dashboard
+- Access Setup
+- Access the `Permission Sets` section
+- Create a new Permission Set (e.g. API for Custom Objects) with license type `Salesforce API Integration`
+- Click on `Object Settings` inside the new Permission Set, then, for each custom SObject, update the visibility in the desired way (e.g. View All, Modify All)
+- Assign the new Permission Set to the user with `Salesforce Integration` user license and `Salesforce API Only System Integrations` profile
+
+**For standard `SObjects`**
+
+- Go to your Salesforce dashboard
+- Access Setup
+- Access the `Permission Sets` section
+- Create a _Permission Set_ (e.g. API for Standard Objects) without specifying a license type
+- Click on `Object Settings` inside the new Permission Set, then, for each standard SObject, update the visibility in the desired way (e.g. View All, Modify All)
+- Assign the new Permission Set to the user with `Salesforce Integration` user license and `Salesforce API Only System Integrations` profile
+
+</details>
+
+##### Authentication
+
+To configure a **Salesforce SObjects** connection you can use two authentication methods:
+
+* __Private Key__, which configures the [OAuth2 JWT flow](https://help.salesforce.com/s/articleView?id=sf.remoteaccess_oauth_jwt_flow.htm&type=5) with the following fields:
+  - `clientId`: either _plain_ or its _secret name_;
+  - `username`: either _plain_ or its _secret name_;
+  - `privateKey`: represents the path where the certificate is stored inside the Job Runner, it can either be _plain_ or a _secret name_ 
+  
+  <details>
+  <summary>Enable JWT Authentication on Salesforce</summary>
+
+  To be able to connect to the Salesforce API using the JWT Bearer flow you will need to follow the next steps.
+  
+  1. Follow the steps one and two from this guide: https://help.salesforce.com/s/articleView?id=sf.connected_app_create_api_integration.htm&type=5
+  2. Then you'll need to upload your self-signed certificate in PEM format (step 5 from the guide). If you don't have a certificate follow these instructions:
+     1. Generate a rsa key with the command `openssl genrsa -out tls/key.pem`
+     2. Then create a request to sign the certificate with this command `openssl req -new -key tls/key.pem -out tls/sf_connect.csr`
+     3. Sign the request with you private key with `openssl x509 -signkey tls/key.pem -in tls/sf_connect.csr -req -out tls/sf_connect.crt`
+     4. Upload the generated certificate (`tls/sf_connect.crt`)
+  3. Now you need to enable the OAuth2 mechanism following the 10th step from the guide, creating a connected app and all.
+  4. Finally you need to enable the JWT access with the step 14 of the guide.
+     
+  Now you should have everything you need to fill out the configuration parameters.
+  </details>
+* __Credentials__, which configures the [**deprecated** OAuth2 username-password flow](https://help.salesforce.com/s/articleView?id=sf.remoteaccess_oauth_username_password_flow.htm&type=5), with the following fields:
+  - `clientId`: either _plain_ or its _secret name_;
+  - `clientSecret`: can only be a _secret name_;
+  - `username`: either _plain_ or its _secret name_;
+  - `password`: can only be a _secret name_;
+  - `securityToken` (optional): can only be a _secret name_.
+
+You also need to provide the __Login Url__ of your Salesforce instance (by default is set to `https://login-salesforce.com`).
+For example, if you are using a testing instance, you'll need to set this field to `https://test.salesforce.com/`.
+
+---
+
+#### Mia Platform
+
+__Mia Platform__ connection enables to retrieve assets from Mia Platform Console projects having
+data models stored on MongoDB through Crud Service.
+
+The required information to setup the connection are:
+
+- the __Url__ where the CRUD Service is located;
+- the __Schemas Endpoint__ (usually `/-/schemas`) to retrieve the collections assets;
+- the __Health Check Endpoint__ (usually `/-/healthz`) to retrieve the version of the CRUD Service.
+
+Additionally, it's possible to define the project and the environment where the CRUD Service is located in a Mia Platform Project
+by choosing a Company.
+
+<div style={{display: 'flex', justifyContent: 'center'}}>
+  <div style={{display: 'flex', width: '100%'}}>
+
+![Crud Connection Form](./../img/connections_crud.png)
+
+  </div>
+</div>
+
+:::tip
+To choose a Company, be sure that Fabric BFF has Console communication enabled. See [here](/data_catalog/data_catalog_fabric_bff.mdx#console-communication) for a detail explanation on how to setup this feature.
+:::
+
+##### Headers
+
+Users can also add additional headers to the request that will be executed by the Connection to retrieve assets.
+
+To do so, click on the `Add Header` button to choose a key-value pair to add to the headers list. The value can also be a _secret name_ reference. 
+
+:::info
+There's no need to add the header `"accept": "application/x-ndjson"` since it's managed internally by the Job Runner service. 
+:::
+
+##### TLS
+
+In case the CRUD Service needs a custom root CA or an insecure HTTPS connection, 
+it's possible to set the connection as `insecure` and set a custom certificate if needed.
+
+---
+
+### Agent Settings
+
+Once the main details of a connection has been defined, you can also tune runtime parameters
+of the Agent Job from the Job Runner. Here you can choose:
+
+- the __Batch Size__, a number that defines the number of assets that can be paginated in a query;
+- the __Column Batch Size__, a number that defines the amount of columns that are expected to be processed by each batch iteration.
+
+This section comes already with the values that will used by default in the Job Runner. Once you've clicked on the `Finish button`,
+a success message will redirect you to the [Connection Overview](#connection-overview) of the newly connection.  
+
+<div style={{display: 'flex', justifyContent: 'center'}}>
+  <div style={{display: 'flex', width: '100%'}}>
+
+![Connection Confirmation](./../img/connections_create_ok.png)
+
+  </div>
+</div>
+
+## Connection Overview
+
+After creating the connection, you can reach its overview of a connection either through the confirmation modal or the Connections Table.
+
+<div style={{display: 'flex', justifyContent: 'center'}}>
+  <div style={{display: 'flex', width: '100%'}}>
+
+![Connection Details](./../img/connection_details.png)
+
+  </div>
+</div>
+
+Here, you can edit both [Connection Details](#connection-details) and [Agent Settings](#agent-settings) by choosing the appropriate tab: 
+when a field is changed correctly, the connection will be updated accordingly and the next execution of the Job Runner will use the latest 
+parameters provided by the user. 
+
+### Delete Connection
+
+From the menu button on the top-right corner of the page, is possible to click `Delete Connection` 
+and start the procedure to remove a connection from the Data Catalog.
+
+<div style={{display: 'flex', justifyContent: 'center'}}>
+  <div style={{display: 'flex', width: '100%'}}>
+
+![Connection Delete](./../img/connection_delete.png)
+
+  </div>
+</div>
+
+:::caution
+This action __will remove any assets that has been imported from that connection in the Data Catalog__, by leveraging the Cleanub Job of the Job Runner.
+:::
+
+## Connections Management
+
+Once a connection has been defined and it's ready to be imported into the Data Catalog, you can start to synchronize its assets.
+
+In the main page of the Connections Panel, you can clik the `sync button` and schedule an Agent Dataset Sync job from the Job Runner.
+Once the action has been executed, the table entry of that connection will be updated by the Job Runner with information about the synchronization process. 
+
+
+<div style={{display: 'flex', justifyContent: 'center'}}>
+  <div style={{display: 'flex', width: '100%'}}>
+
+![Connection Sync Running](./../img/connections_sync_running.png)
+
+  </div>
+</div>
+
+Once the synchronization has been completed, a `Sync Completed` message will be returned.
+
+<div style={{display: 'flex', justifyContent: 'center'}}>
+  <div style={{display: 'flex', width: '100%'}}>
+
+![Connection Sync Running](./../img/connections_sync_completed.png)
+
+  </div>
+</div>
+
+
+If there's an error with your connection parameters (for example, a secret that has not been found by the Job Runner), an error message will be returned by the process.
+
+<div style={{display: 'flex', justifyContent: 'center'}}>
+  <div style={{display: 'flex', width: '100%'}}>
+
+![Connection Sync Failed](./../img/connections_sync_failed.png)
+
+  </div>
+</div>
+
+
